sae503/search/auth-header.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-header
  namespace: prod
spec:
  headers:
    customRequestHeaders:
      Authorization: "default_key"
