sae503/search/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api-deployment
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search-api
  template:
    metadata:
      labels:
        app: search-api
    spec:
      containers:
      - name: search-api
        image: clementserandour/api_search:latest
        ports:
        - containerPort: 5003
