sae503/search/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api-service
  namespace: prod
spec:
  selector:
    app: search-api
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
